--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-  <h1 id='title'>Paleta de Cores</h1>
+  <h1 id="title">Paleta de Cores</h1>
+
+  <section id="color-palette">
+    <div id="black" class="color"></div>
+    <div id="cyan" class="color"></div>
+    <div id="green" class="color"></div>
+    <div id="red" class="color"></div>
+  </section>
+
 </body>
 
 </html>
