--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div id="red" class="color"></div>
   </section>
 
+  <section id="pixel-board"></section>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
