--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
 
-  <section id="color-palette">
-    <div id="black" class="color"></div>
-    <div id="cyan" class="color"></div>
-    <div id="green" class="color"></div>
-    <div id="red" class="color"></div>
-  </section>
+  <section id="color-palette"></section>
 
   <section id="pixel-board"></section>
 
