--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <section id="color-palette"></section>
 
+  <section id='button'></section>
+
   <section id="pixel-board"></section>
 
   <script src="script.js"></script>
