--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html>
 
 <head>
   <meta charset="UTF-8">
-  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <title>pixels Art</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel='stylesheet' href='style.css'>
 </head>
 
 <body>
-  <h1 id="title">Paleta de Cores</h1>
+  <main>
+    <h1 id='title'>Paleta de Cores</h1>
 
-  <section id="color-palette"></section>
+    <section id='color-palette'></section>
 
-  <section id='button'></section>
+    <section id='inputs'>
+      <input id='board-size' type='number' min='1' max='50'>
+      <button id='generate-board'>VQV</button>
+      <button id='clear-board'>Limpar</button>
+    </section>
 
-  <section id="pixel-board"></section>
+    <section id='pixel-board'></section>
 
-  <script src="script.js"></script>
+    <script src='script.js'></script>
+  </main>
 </body>
 
 </html>
