--- a/index.html
+++ b/index.html
@@ -3,24 +3,32 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset='UTF-8'>
   <title>pixels Art</title>
   <link rel='stylesheet' href='style.css'>
 </head>
 
 <body>
+  <header>
+    <h1>Pixels Art</h1>
+  </header>
+
   <main>
-    <h1 id='title'>Paleta de Cores</h1>
+    <div id="color-palette-container">
+      <h1 id='title'>Paleta de Cores</h1>
 
-    <section id='color-palette'></section>
+      <section id='color-palette'></section>
 
-    <section id='inputs'>
-      <input id='board-size' type='number' min='1' max='50'>
-      <button id='generate-board'>VQV</button>
-      <button id='clear-board'>Limpar</button>
-    </section>
+      <section id='inputs'>
+        <input id='board-size' type='number' min='1' max='50'>
+        <div id='buttons-container'>
+          <button class='buttons' id='generate-board'>VQV</button>
+          <button class='buttons' id='clear-board'>Limpar</button>
+        </div>
+      </section>
 
-    <section id='pixel-board'></section>
+      <section id='pixel-board'></section>
+    </div>
 
     <script src='script.js'></script>
   </main>
