--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset='UTF-8'>
-  <title>pixels Art</title>
+  <title>Pixels Art</title>
   <link rel='stylesheet' href='style.css'>
 </head>
 
