--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset='UTF-8'>
   <title>Pixels Art</title>
-  <link rel='stylesheet' href='style.css'>
+  <link href='style.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
       <section id='color-palette'></section>
 
       <section id='inputs'>
-        <input id='board-size' type='number' min='1' max='50'>
+        <input id='board-size' max='50' min='1' type='number'>
         <div id='buttons-container'>
           <button class='buttons' id='generate-board'>VQV</button>
           <button class='buttons' id='clear-board'>Limpar</button>
